nginx.pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginxpod
  labels:
    app: nginx
    env: dev
    
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    ports:
     - containerPort: 80
