NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-policy
spec:
  podSelector:
    matchLabels:
      app: nginx

  policyTypes:
   - Ingress
  ingress: []

  # - ports:
  #     - port: 80
